--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: John Doe # your name (or website title) here
+title: Anubhav Srivastava # your name (or website title) here
 logo: "/images/IMG-20170108-WA0020.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
